tests/baselines/reference/for-of56.errors.txt
tests/cases/conformance/es6/for-ofStatements/for-of56.ts(1,17): error TS2488: Type must have a '[Symbol.iterator]()' method that returns an iterator.


==== tests/cases/conformance/es6/for-ofStatements/for-of56.ts (1 errors) ====
    for (var let of []) {}
                    ~~
!!! error TS2488: Type must have a '[Symbol.iterator]()' method that returns an iterator.